# ai-studio

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  README.md  dev.yml  docker-compose.local-pg-milvus.yml  main.py  pyproject.toml
apps/chatbot/backend/: .gitignore
apps/chatbot/backend/open_webui/: env.py  main.py
apps/chatbot/src/: app.html
apps/chatbot/src/routes/: +layout.svelte
apps/chatbot/static/: manifest.json  opensearch.xml
apps/docs-site/: README.md  docusaurus.config.js  sidebars.js
apps/docs-site/brand/: meyo-logo-suite-prompts.md
apps/docs-site/docs/deploy/: deployment_faq.md  deployment_process.md
apps/docs-site/docs/design/: 01_inference_runtime_framework_design.md  logging_system_design.md  meyo_chatbot_migration_design.md  meyo_studio_flow_migration_design.md
apps/docs-site/docs/development/: 00_init_project.md  04_common_scense_register.md
apps/docs-site/docs/feature/: 00_enterprise-ai-methodology-radar.md  01_ap2-ucp-agent-commerce.md  02_ontology-graphrag-enterprise-ai.md  03_opentelemetry-genai-observability.md  04_harness-engineering-agentos-development.md  05_google-design-md-methodology.md  06_symphony-codex-orchestration-proof-of-work.md  07_dataops-rag-agentos-implementation.md
apps/docs-site/nginx/: default.local.conf  nginx-docs-ssl.conf
apps/docs-site/playbooks/: README.md  add-new-api-endpoint.md
apps/docs-site/scripts/: normalize_zh_cn_docs.py  translate_docs_to_zh_cn.py
apps/docs-site/src/clientModules/: mermaidZoom.js
apps/docs-site/src/css/: custom.css
apps/meyo-chatbot/: .dockerignore  .gitignore  package-lock.json  package.json  pyproject.toml
apps/meyo-chatbot/backend/: .dockerignore
apps/meyo-chatbot/backend/open_webui/: __init__.py  env.py
apps/meyo-chatbot/scripts/: copy-frontend-to-backend.js  prepare-pyodide.js
apps/meyo-chatbot/src/lib/: constants.ts
apps/meyo-studio-flow/: .env.example  package-lock.json
apps/meyo-studio-flow/src/frontend/: index.html  jest.setup.js  package-lock.json  package.json  vite.config.mts
configs/: meyo-app-config.example.toml  meyo-bm25-rag.toml  meyo-cloud-storage.example.toml  meyo-graphrag.toml  meyo-local-glm.toml  meyo-local-llama-cpp-server.toml  meyo-local-llama-cpp.toml  meyo-local-mlx.toml  meyo-local-qwen.toml  meyo-local-qwen3.example.toml  meyo-local-vllm.toml  meyo-proxy-aimlapi.toml  meyo-proxy-baichuan.toml  meyo-proxy-burncloud.toml  meyo-proxy-claude.toml  meyo-proxy-deepseek.toml  meyo-proxy-gemini.toml  meyo-proxy-gitee.toml  meyo-proxy-infiniai.toml  meyo-proxy-minimax.toml  meyo-proxy-moonshot.toml  meyo-proxy-ollama.toml  meyo-proxy-openai.toml  meyo-proxy-siliconflow-mysql.toml  meyo-proxy-siliconflow-pg-milvus.toml  meyo-proxy-siliconflow.toml  meyo-proxy-spark.toml  meyo-proxy-tongyi.toml  meyo-proxy-volcengine.toml  meyo-proxy-wenxin.toml  meyo-proxy-yi.toml  meyo-proxy-zhipu.toml  meyo.toml
docker/: meyo-stack-entrypoint.sh  meyo-stack-nginx.conf
docs/: Dockerfile-deploy  README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/application/base_project/: architecture_design.md  development_playbooks.md  (+8 more)
docs/docs/design/: model_provider_manager_design.md  project_architecture_dependency_design.md
docs/docs/development/: 00_init_project.md  01_update_package_config.md  02_add_technology_stack_dependency.md  03_model_provider_serve.md
docs/patchs/: fix_0.7.4.patch  fix_0.7.5.patch
docs/playbooks/: README.md  add-new-api-endpoint.md  add-new-scene.md
docs/scripts/: run_docusaurus.mjs
docs/src/pages/: index.js
docs/static/: redirect.js
tests/: test_app_config.py
(+258 files in other folders)
