[project]
name = "ai-studio"
version = "0.1.0"
description = "ai 能力平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/ai-studio-core",
    "packages/ai-studio-ext",
    "packages/ai-studio-client",
    "packages/ai-studio-serve",
    "packages/ai-studio-sandbox",
    "packages/ai-studio-accelerator",
    "packages/ai-studio-app",
]
